Update styling so as not to move content on toggle - fix so alignment

--- a/src/sass/_employeeSearch.scss
+++ b/src/sass/_employeeSearch.scss
@@ -60,6 +60,7 @@
       align-items: center;
       display: flex;
       margin-right: 10px;
+      padding-left: 5px;
 
       .label {
         margin-right: 10px;
@@ -472,5 +473,6 @@
 }
 
 .eas-inactive-toggle {
+  padding-left: 5px;
   margin-top: 20px;
 }
